<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />

        <variable
            name="clickListener"
            type="com.example.android.politicalpreparedness.representative.adapter.RepresentativeListener" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/normal_margin">

        <ImageView
            android:id="@+id/representative_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:profileImage="@{representative.official.photoUrl}"
            tools:src="@drawable/ic_profile"
            android:contentDescription="@string/representative_photo" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray50"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@{representative.office.name}"
                tools:text="President of the United States" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/normal_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray50"
                        android:textSize="@dimen/title_text_size"
                        android:textStyle="normal"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:text="@{representative.official.name}"
                        tools:text="Donal J.trump" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray50"
                        android:textSize="@dimen/party_text_size"
                        android:textStyle="normal"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:text="@{representative.official.party}"
                        tools:text="Republican Party" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/www_icon"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:adjustViewBounds="true"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_www"
                    android:contentDescription="@string/www_icon" />

                <ImageView
                    android:id="@+id/facebook_icon"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:adjustViewBounds="true"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="@dimen/icon_margin"
                    android:src="@drawable/ic_facebook"
                    android:contentDescription="@string/facebook_icon" />

                <ImageView
                    android:id="@+id/twitter_icon"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:adjustViewBounds="true"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="@dimen/icon_margin"
                    android:src="@drawable/ic_twitter"
                    android:contentDescription="@string/twitter_icon" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</layout>